[gd_scene load_steps=2 format=2]

[ext_resource path="res://GameComponents/DudelingRow/dudeling_row.gd" type="Script" id=1]

[node name="DudelingRow" type="Node2D"]
script = ExtResource( 1 )

[node name="DudelingContainer" type="Node2D" parent="."]
__meta__ = {
"_edit_lock_": true
}

[node name="DudelingPositions" type="Node2D" parent="."]
__meta__ = {
"_edit_lock_": true
}

[node name="Position2D0" type="Position2D" parent="DudelingPositions"]
position = Vector2( -605, 0 )

[node name="Position2D1" type="Position2D" parent="DudelingPositions"]
position = Vector2( -550, 0 )

[node name="Position2D2" type="Position2D" parent="DudelingPositions"]
position = Vector2( -495, 0 )

[node name="Position2D3" type="Position2D" parent="DudelingPositions"]
position = Vector2( -440, 0 )

[node name="Position2D4" type="Position2D" parent="DudelingPositions"]
position = Vector2( -385, 0 )

[node name="Position2D5" type="Position2D" parent="DudelingPositions"]
position = Vector2( -330, 0 )

[node name="Position2D6" type="Position2D" parent="DudelingPositions"]
position = Vector2( -275, 0 )

[node name="Position2D7" type="Position2D" parent="DudelingPositions"]
position = Vector2( -220, 0 )

[node name="Position2D8" type="Position2D" parent="DudelingPositions"]
position = Vector2( -165, 0 )

[node name="Position2D9" type="Position2D" parent="DudelingPositions"]
position = Vector2( -110, 0 )

[node name="Position2D10" type="Position2D" parent="DudelingPositions"]
position = Vector2( -55, 0 )

[node name="Position2D11" type="Position2D" parent="DudelingPositions"]

[node name="Position2D12" type="Position2D" parent="DudelingPositions"]
position = Vector2( 55, 0 )

[node name="Position2D13" type="Position2D" parent="DudelingPositions"]
position = Vector2( 110, 0 )

[node name="Position2D14" type="Position2D" parent="DudelingPositions"]
position = Vector2( 165, 0 )

[node name="Position2D15" type="Position2D" parent="DudelingPositions"]
position = Vector2( 220, 0 )

[node name="Position2D16" type="Position2D" parent="DudelingPositions"]
position = Vector2( 275, 0 )

[node name="Position2D17" type="Position2D" parent="DudelingPositions"]
position = Vector2( 330, 0 )

[node name="Position2D18" type="Position2D" parent="DudelingPositions"]
position = Vector2( 385, 0 )

[node name="Position2D19" type="Position2D" parent="DudelingPositions"]
position = Vector2( 440, 0 )

[node name="Position2D20" type="Position2D" parent="DudelingPositions"]
position = Vector2( 495, 0 )

[node name="Position2D21" type="Position2D" parent="DudelingPositions"]
position = Vector2( 550, 0 )

[node name="Position2D22" type="Position2D" parent="DudelingPositions"]
position = Vector2( 605, 0 )
